# Django-Expense-Tracker

./: pyproject.toml
django_expense_tracker/django_expense_tracker/: settings.py  urls.py
src/django_expense_tracker/: asgi.py  settings.py  wsgi.py
