[tool.poetry]
name = "django-expense-tracker"
version = "0.1.0"
description = ""
authors = ["Aditya Bhushan <adityabhushan934@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
